fix level preview overflow when more levels are loaded

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -60,13 +60,11 @@ body::-webkit-scrollbar-thumb {
 
 #container {
   position: relative;
-  width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   line-height: 0;
-  margin: 3vh 0 3vh 0;
+  margin: 3vh 0 5vh 0;
 }
 
 #container button {
